styles/style.css
/*
Colors:

Text: 1A1A1A
Green: #00B172
White: #FFF

*/
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  color: 1a1a1a;
}

/* Section 1*/

.top-menu {
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
  background-color: #fff;
  display: flex;
  justify-content: space-between;
}

.main-logo {
  display: flex;
  justify-content: left;
  width: 20%;
}

.navigation-menu {
  display: flex;
  justify-content: space-evenly;
  list-style: none;
}

.navigation-menu a {
  text-decoration: none;
  margin: 10px;
  font-size: large;
}

/* Section 2*/

.hero-img {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url("../images/landing.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 500px;
}

.hero-text {
  color: #fff;
}

.hero-text h1 {
  font-size: 3em;
  margin: 0 0 2% 0;
  padding: 0;
}

.hero-text p {
  font-size: 1em;
  margin: 0;
  padding: 0;
}

/* Section 3*/

.green-line {
  border: none;
  height: 3px;

  color: #00b172;
  background-color: #00b172;
  width: 15em;
  margin-bottom: 50px;
}

.top-container-text {
  margin-bottom: 0;
  padding-bottom: 0;
  font-size: 2em;
  display: flex;
  justify-content: center;
}

.contents-container {
  display: flex;
  justify-content: space-evenly;
}
.single-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 30%;
}

.single-box img {
  height: 75px;
}

.single-box h3 {
  color: #00b172;
}

.single-box p {
  text-align: center;
}

/* Section 4*/

.inviting-section {
  /*background-image: url(../images/spotify-icon-white.png);*/

  background-color: #00b172;
  margin-left: 2em;
  margin-right: 2em;
  color: #fff;
}

.inviting-section h2 {
  margin: 2em 1em 1em 1em;
  padding-top: 1em;
  border-bottom: 3px solid currentColor;
  text-decoration: none;
}

.left-text {
  font-size: large;
  display: flex;
  flex-direction: column;
  justify-content: left;
  width: 100%;
}

.bottom-logo img {
  display: flex;
  flex-direction: column;
  align-content: center;
  width: 30%;
}

.spotify-print img {
  display: flex;
  flex-direction: column;
  align-content: center;
  width: 90%;
}

.column-text {
  display: flex;
  flex-direction: column;
  margin-left: 50px;
}

.centered-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

